--- a/src/Styles/Checkout.css
+++ b/src/Styles/Checkout.css
@@ -15,3 +15,15 @@
     padding: 10px;
     border-bottom: 1px solid lightgray;
 }
+
+
+
+@media screen and (max-width: 940px) {
+    .checkout {
+        flex-direction: column;
+    }
+    .checkout__title {
+        margin-right: 5px;
+        padding: 5px;
+    }
+}
