--- a/src/Styles/CheckoutProduct.css
+++ b/src/Styles/CheckoutProduct.css
@@ -31,3 +31,13 @@
     font-size: 17px;
     font-weight: 800;
 }
+
+
+
+@media screen and (max-width: 940px) {
+  .checkoutProduct__image {
+    object-fit: contain;
+    width: 100px;
+    height: 150px;
+  }
+}
